# algorithms-final-exersices

./: README.md  actividad_4_arrays.psc
Act_Int_Arreglos/: exersice_1.psc  exersice_2.psc  exersice_3.psc  exersice_suma_array.psc
Act_Int_Estructuras_Control/: Actividad_integradora.psc
Actividad5_UII_PaulContreras/Figuras_Geometricas_PaulContreras 2/For_exersices_figuras_geometricas/: for_exersice_amb_trg.psc  for_exersice_trg_rec_inv.psc
Actividad5_UII_PaulContreras/Figuras_Geometricas_PaulContreras/For_exersices_figuras_geometricas/: for_exersice_cuadrado.psc  (+1 more)
Actividad5_UII_PaulContreras/tablas_multiplicar/: for_exersice_tablas_multiplicar.psc  while_exersice_tabla_multiplicar.psc
Actividades_Clase_17/: while_exercise_01.psc  while_exercise_02.psc  while_exercise_03.psc  while_exercise_04.psc  while_exersice_05.psc
Actividades_Clase_24/: do_while_exercise_1.psc  do_while_exercise_3.psc  do_while_exercise_4.psc  do_while_exercise_5.psc  do_while_exercise_6.psc  do_while_exersice_2.psc
Algoritmos_En_C/algoritmos_en_c/: CMakeLists.txt  exersice_1.c  exersice_2.c  exersice_3.c  exersice_4.c  exersice_5.c  exersice_6.c
Arreglos/: ProgramaUII_6_PaulContreras.psc  array_exersice3.psc  array_exersice_2.psc  exersice_1.psc  exersie_multiplicacion_array.psc  pali_last_Version.psc  sis_cal.psc
actividades en clase/: for_exersice_1.psc  for_exersice_2.psc  for_exersice_3.psc  for_exersice_4.psc  for_exersice_5.psc  for_exersice_6.psc
arrays-en-c/: CMakeLists.txt  exersice1.c  exersice2.c  exersice3.c  exersice4.c  exersice5.c
tic-tac-toe-game-c/: .gitignore
(+3 files in other folders)
