cmake_minimum_required(VERSION 3.23)
project(untitled C)

set(CMAKE_C_STANDARD 23)

add_executable(exersice_1  exersice_1.c)
add_executable(exersice_2 exersice_2.c)
add_executable(exersice_3 exersice_3.c)
add_executable(exersice_4 exersice_4.c)
add_executable(exersice_5 exersice_5.c)
add_executable(exersice_6 exersice_6.c)
